@@ -16,10 +16,10 @@ unpackpath = /home/buildd/slavebin/unpack-chroot
 cleanpath = /home/buildd/slavebin/remove-build
 mountpath = /home/buildd/slavebin/mount-chroot
 umountpath = /home/buildd/slavebin/umount-chroot
+processscanpath = /home/buildd/slavebin/scan-for-processes
 
 [debianmanager]
 sbuildpath = /home/buildd/slavebin/sbuild-package
 sbuildargs = -dautobuild --nolog --batch -A
 updatepath = /home/buildd/slavebin/update-debian-chroot
-processscanpath = /home/buildd/slavebin/scan-for-processes
 ogrepath = /home/buildd/slavebin/apply-ogre-model
