@@ -12,17 +12,16 @@ cleanpath = /var/tmp/buildd/slavebin/remove-build
 mountpath = /var/tmp/buildd/slavebin/mount-chroot
 umountpath = /var/tmp/buildd/slavebin/umount-chroot
 preppath = /var/tmp/buildd/slavebin/slave-prep
+processscanpath = /var/tmp/buildd/slavebin/scan-for-processes
 
 [debianmanager]
 sbuildpath = /var/tmp/buildd/slavebin/sbuild-package
 sbuildargs = -dautobuild --nolog --batch
 updatepath = /var/tmp/buildd/slavebin/update-debian-chroot
-processscanpath = /var/tmp/buildd/slavebin/scan-for-processes
 sourcespath = /usr/share/launchpad-buildd/slavebin/override-sources-list
 
 [binarypackagemanager]
 sbuildpath = /var/tmp/buildd/slavebin/sbuild-package
 sbuildargs = -dautobuild --nolog --batch
 updatepath = /var/tmp/buildd/slavebin/update-debian-chroot
-processscanpath = /var/tmp/buildd/slavebin/scan-for-processes
 sourcespath = /usr/share/launchpad-buildd/slavebin/override-sources-list
