@@ -15,10 +15,10 @@ unpackpath = /usr/share/launchpad-buildd/slavebin/unpack-chroot
 cleanpath = /usr/share/launchpad-buildd/slavebin/remove-build
 mountpath = /usr/share/launchpad-buildd/slavebin/mount-chroot
 umountpath = /usr/share/launchpad-buildd/slavebin/umount-chroot
+processscanpath = /usr/share/launchpad-buildd/slavebin/scan-for-processes
 
 [debianmanager]
 updatepath = /usr/share/launchpad-buildd/slavebin/update-debian-chroot
-processscanpath = /usr/share/launchpad-buildd/slavebin/scan-for-processes
 sourcespath = /usr/share/launchpad-buildd/slavebin/override-sources-list
 
 [binarypackagemanager]
