@@ -1,7 +1,12 @@
 launchpad-buildd (115) UNRELEASED; urgency=low
 
+  [ Adam Conrad ]
   * Short the readlink call in scan-for-process with a true to avoid
     prematurely exiting the process scan when tripping over zombies.
+
+  [ Colin Watson ]
+  * Move scan-for-processes up to the top-level slave code so that it is
+    available for more general use.
 
  -- Adam Conrad <adconrad@ubuntu.com>  Mon, 29 Apr 2013 15:47:20 -0600
 
